devscripts (2.10.34) UNRELEASED; urgency=low

  * checkbashisms:
    + Match the use of "shell echo -n" and "if foo then echo -n"
    + Fix a thinko in the quoted-block detection (thankfully the effects were
      largely benign, unless one was attempting to check libtool...)
  * debchange: Also collapse UNRELEASED stanzas when -d is used
  * debcheckout:
    + Improve git repository handling with --file
    + Fix directory naming when using -f and no explicit destination directory
      was specified
  * uscan:
    + Parse sites which embed newlines inside hrefs (horrible, but works)
    + Always treat patterns referring to FTP sites as case-sensitive rather
      than a confusing (and broken) mixture of case-sensitive and
      case-insensitive matching
    + Correctly match directory names in HTMLised FTP proxy listings; the
      equivalent change for filenames was applied in 2.10.11 (#448636)

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Tue, 01 Jul 2008 21:10:37 +0100

devscripts (2.10.33) unstable; urgency=low

  The "bigger brown paper bag" upload

  * bts, debchange, mass-bug: Revert the changes introduced in #486594.
    "date -R" gives us a locale-independent string, strftime() doesn't.

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Sun, 29 Jun 2008 13:36:35 +0100

devscripts (2.10.32) unstable; urgency=low

  * bts: Fix brown paper bag. When establishing an SMTPS connection, only use
    the hostname, rather than the fully specified "ssmtp://hostname[:port]"
    string
  * chdist: Fix sed expressions in src2bin (Closes: #488422)

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Sat, 28 Jun 2008 13:44:12 -0700

devscripts (2.10.31) unstable; urgency=low

  [ Adam D. Barratt ]
  * bts
    + Replace the use of date -R with strftime(). Thanks Stephen Gran.
    + Allow an SMTP host to be specified as using SMTPS and/or a
      non-standard port number
  * checkbashisms:
    + Add a check for $UID being set to -x