@@ -454,13 +454,13 @@ sub init_hashes {
 	$LEADIN . qr'local\s+\w+\s+\w+' => q<local x y>,
 	qr'(?:^|\s+)\s*\(?\w*[^\(\w\s]+\S*?\s*\(\)[^\"]?'
 		=> q<function names should only contain [a-z0-9_]>,
-	$LEADIN . qr'(push|pop)d\b' =>    q<(push|pod)d>,
+	$LEADIN . qr'(push|pop)d(\s|\Z)' =>    q<(push|pod)d>,
 	$LEADIN . qr'export\s+-[^p]' =>  q<export only takes -p as an option>,
-	$LEADIN . qr'ulimit\b' =>         q<ulimit>,
-	$LEADIN . qr'shopt\b' =>          q<shopt>,
+	$LEADIN . qr'ulimit(\s|\Z)' =>         q<ulimit>,
+	$LEADIN . qr'shopt(\s|\Z)' =>          q<shopt>,
 	$LEADIN . qr'type\s' =>          q<type>,
 	$LEADIN . qr'time\s' =>          q<time>,
-	$LEADIN . qr'dirs\b' =>          q<dirs>,
+	$LEADIN . qr'dirs(\s|\Z)' =>          q<dirs>,
 	qr'(?:^|\s+)[<>]\(.*?\)'	    => q<\<() process substituion>,
 	qr'(?:^|\s+)readonly\s+-[af]' => q<readonly -[af]>,
 	$LEADIN . qr'(sh|\$\{?SHELL\}?) -[rD]' => q<sh -[rD]>,
